# dana

./: .gitignore  .pre-commit.py  LICENSE  NOTES.md  README  README.md  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
req/improvements/: impr0_bgworker
src/dana/: __init__.py  __main__.py  __metadata__.py  api.py  cli.py  exampledata.py  fun.py  gui.py  log.py
src/dana/data/: datacontainer.py  examples.py
src/dana/datavis/: betterlegend.py  defaultPlot.py
src/dana/decisiontree/: __init__.py  widgets.py
src/dana/examples/: __init__.py  __main__.py  _browser.py  basic_plots.py  decisiontree.py
src/dana/examples/basics/: plot_csv.py  plot_dataframe.py
src/dana/guicomponents/: betterlineedit.py  bettertreeview.py  datatree.py  dock.py  dock_df.py  dock_ds.py  dock_figure.py  dock_p.py  metaplot.py  plot.py
src/dana/lineplot/: __init__.py  widgets.py
src/test/: conftest.py  test_cli.py
tests/: conftest.py  test_basics.py  test_examples.py  test_gui.py  test_pd_entrypoint.py
