[metadata]
name = dana
version = 0.0.0
author = mb
description = a module for Data ANAlysis
license = MIT
classifiers=
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.10

[flake8]
max-line-length = 88
extend-ignore =
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203,

